2019-01-12 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/time.c:
	  Make some variables const so save RAM on targets that do not have __code.

2019-01-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peeph.def:
	  Fixes and improvements for stm8 peephole rules, patch by Visenri.
	* support/regression/tests/*.c:
	  Enable some regression tests that need struct assignment support.

2019-01-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  ez80_z80 fixes.
	* src/z80/gen.c:
	  Only use eZ80 lea for stack frame setup when doing so provides a code size advantage.
	* .version:
	  Bump version for stable ez80_z80 backend.
	* support/regression/Makefile.in:
	  Include ez80_z80 backend in test-z80 target.

2019-01-07 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/ports/ez80-z80/spec.mk:
	  Use new eZ80 uCsim in ez80_z80 regression tests.
	* src/z80/gen.c:
	  ez80_z80 fixes.

2019-01-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCmem.c:
	  Improve error handling on missing output storage class.

2019-01-03 Benedikt Freisen <b.freisen AT gmx.net>

	* src/version.awk:
	  Fix bug #2818.

2019-01-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.c,
	  src/SDCCerr.h,
	  src/SDCCerr.c,
	  support/valdiag/tests/bug-2773.c:
	  Fix bug #2773.
	* src/ds390/main.c:
	  Change the name of a hackish predefined macro for standard-compliance.

2018-12-31 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Document default calling convention for z80, z180, r2k, r3ka, ez80_z80, tlcs90, stm8.
	* src/SDCCast.c:
	  Fix bug #2850.
	* src/SDCCsymt.c:
	  Fix bug #2797.
	* src/SDCCmain.c,
	  src/mcs51/main.c,
	  src/hc08/main.c,
	  src/stm8/main.c:
	  Fix bug #2809.
	* src/SDCClospre.hpp,
	  support/regression/tests/bug-2558.c:
	  Fix bug #2558.
	* src/SDCCast.c:
	  Fix bug #2535.
	* device/lib/printf_large.c,
	  support/regression/tests/bug-2732.c:
	  Fix bug #2732.
