@@ -1,3 +1,9 @@
+2019-01-20 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/gen.c,
+	  support/regression/tests/bug-2866.c:
+	  Fix bug #2866.
+
 2019-01-12 Philipp Klaus Krause <pkk AT spth.de>
 
 	* device/lib/time.c:
